# okapi

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  DIDComm-gRPC.podspec  DIDCommGrpc.podspec  Initialize.ps1  Initialize.py  Okapi-iOS.podspec  Okapi.podspec  README.md  SECURITY.md  package-lock.json  package.json  remove.txt  renovate.json  script.ps1
.github/: CODEOWNERS
Android_/: compile_native_libraries
Rlang/: okapi_example.R
android/: settings.gradle
dart/: .packages  CHANGELOG.md  README.md  pubspec.yaml
devops/: Build.ps1  BuildGolang.ps1  BuildJava.ps1  BuildLibraries.ps1  BuildPython.ps1  BuildRuby.ps1  BuildSwift.ps1  CompileProtoFiles.ps1  VersionParse.ps1  azure-pipelines.yml  build-template.yml  build_sdks.py  build_winget.py  generate_proto_files.py  package-nuget.yml  requirements.txt  run-tests.yml
docs/: didcomm-grpc.md
dotnet/: .gitignore  BuildAndTest.ps1  Clean.ps1  DIDComm.Messaging.sln  Directory.Build.props  Okapi.sln  README.md  Test.ps1  global.json
go/: README.md  buildGoProto.ps1  go.mod  go.sum  main.go
include/: didcommgrpc.h  module.modulemap  okapi.h
ios/: Podfile  TrinsicOkapi.podspec  buildProto.ps1
java/: AndroidManifest.xml  AndroidValues.xml  DIDComm_Messaging_gRPC_NativeMethods.h  R.txt  README.md  android.java  build.gradle  buildProto.ps1  compile_native_libraries  settings.gradle
libs/: README.md
mathematica/: OkapiInterface.nb  okapi_interface.py
matlab/: README.md  okapi_python.m
native/: Cargo.toml  README.md  build.rs  cbindgen.toml  deb.control
native/.cargo/: _config.toml  config
native/did-key.rs/src/: bls12381.rs  didcore.rs  ed25519.rs  lib.rs  x25519.rs
native/include/: didcomm.h  didcomm_crypto.h
native/src/: crypto.rs  envelope.rs  keys.rs  lib.rs  macros.rs  pack.rs  proto.rs  sign.rs
native/src/api/: keys.rs  keys_wasm.rs  mod.rs  pack.rs  pack_wasm.rs
native/src/didcomm/: mod.rs  xchacha.rs
native/src/didkey/: mod.rs
native/src/ffi/: didcomm.rs  didkey.rs  hashing.rs  ldproofs.rs  metadata.rs  mod.rs  oberon.rs  utils.rs
native/src/hashing/: mod.rs
native/src/jni/: didcomm.rs  didkey.rs  mod.rs
native/src/keys/: ed25519.rs  mod.rs  p256.rs  x25519.rs
native/src/ldproofs/: mod.rs
native/src/metadata/: mod.rs
native/src/oberon/: mod.rs
native/src/pack/: aesgcm.rs  mod.rs  xchacha.rs
native/src/proto/: didcomm_messaging.rs  google_protobuf.rs  mod.rs  okapi_examples.rs  okapi_keys.rs  okapi_proofs.rs  okapi_security.rs  okapi_transport.rs  pbmse.rs
native/src/proto/okapi/: mod.rs  okapi_examples.rs  okapi_hashing.rs  okapi_keys.rs  okapi_metadata.rs  okapi_proofs.rs  okapi_security.rs  okapi_transport.rs
native/src/proto/pbmse/: pbmse.rs
native/src/tests/: key_tests.rs  keys.rs  mod.rs  oberon.rs  pack.rs  sign.rs  utils.rs
native/wix/: main.wxs
objc/: .gitignore  MAINTAINERS.md  README.md
proto/: api.proto  basic-message.proto  buf.yaml  didcomm.proto  examples.proto  keys.proto  proofs.proto  security.proto  transport.proto
python/: .gitignore  README.md  api_pb2.py  basic_message_pb2.py  build.ps1  didcomm.py  didcomm_demo.py  didcomm_pb2.py  didcommgrpc.py  examples_pb2.py  generate_proto_files.py  keys_pb2.py  okapi.py  okapi_demo.py  okapi_utils.py  package.ps1  proofs_pb2.py  pyproject.toml  requirements.txt  security_pb2.py  setup.cfg  setup.py  test_ldproofs.py  test_okapi.py
python/libs/: README.md
python/okapi/: generate_proto_files.py  keys.py  okapi_utils.py  proofs_pb2.py  transport_pb2.py  wrapper.py
python/okapi/proto/okapi/examples/: __init__.py
python/okapi/proto/okapi/examples/v1/: __init__.py
python/okapi/proto/okapi/keys/: __init__.py
python/okapi/proto/okapi/proofs/: __init__.py
python/okapi/proto/okapi/security/: __init__.py
python/okapi/proto/okapi/transport/: __init__.py
python/okapi/proto/pbmse/: __init__.py
python/pbmse/: pbmse_pb2.py
python/src/: okapi_demo.py
python/src/okapi/: __init__.py  generate_proto_files.py  keys.py  okapi_utils.py  proofs_pb2.py  transport_pb2.py
python/src/trinsic/: generate_proto_files.py
python/src/trinsic/models/: CredentialTemplates_pb2.py  Credentials_pb2.py  PresentationTemplates_pb2.py  Presentations_pb2.py
python/tests/: okapi_demo.py  test_hash.py  test_keys.py  test_ldproofs.py  test_oberon.py  test_trinsic_service_wrapper.py  test_utils.py
python/trinsic-okapi/: wrapper.py
python/trinsicokapi/: __main__.py  didcomm.py  didkey.py  hashing.py  ldproofs.py  librarydownloader.py  metadata.py  oberon.py  okapi_utils.py  wrapper.py
python/trinsicokapi/proto/okapi/: metadata.py
python/trinsicokapi/proto/okapi/examples/: v1.py
python/trinsicokapi/proto/okapi/examples/v1/: __init__.py
python/trinsicokapi/proto/okapi/hashing/: v1.py
python/trinsicokapi/proto/okapi/hashing/v1/: __init__.py
python/trinsicokapi/proto/okapi/keys/: v1.py
python/trinsicokapi/proto/okapi/keys/v1/: __init__.py
python/trinsicokapi/proto/okapi/metadata/: __init__.py
python/trinsicokapi/proto/okapi/proofs/: v1.py
python/trinsicokapi/proto/okapi/proofs/v1/: __init__.py
python/trinsicokapi/proto/okapi/security/: v1.py
python/trinsicokapi/proto/okapi/security/v1/: __init__.py
python/trinsicokapi/proto/okapi/transport/: v1.py
python/trinsicokapi/proto/okapi/transport/v1/: __init__.py
python/trinsicokapi/proto/pbmse/: v1.py
python/trinsicokapi/proto/pbmse/v1/: __init__.py
react-native/: README.md
ruby/: .rubocop.yml  CODE_OF_CONDUCT.md  Gemfile  (+4 more)
wasm/: .eslintignore  .gitignore  Cargo.toml  GenProto.ps1  Generate-Proto.ps1  README.md  lerna.json  package-lock.json  package.json
wasm/examples/greeter-sample/: README.md  package-lock.json  package.json
wasm/examples/greeter-sample/src/: index.ts  keys.ts
wasm/examples/greeter-sample/src/client/: unary.ts
wasm/examples/node-sample/: README.md  index.js  package-lock.json  package.json
wasm/examples/webpack-sample/: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
wasm/src/: didcomm.rs  didkey.rs  hashing.rs  ldproofs.rs  lib.rs  metadata.rs  oberon.rs
(+744 files in other folders)
