[package]
name = "okapi"
version = "0.1.0"
authors = ["Tomislav Markovski <tomislav@trinsic.id>"]
edition = "2018"
# ensure this is not checked in as "true" as it will
# cause vendored libraries to fail compilation due
# to dependency on protoc compiler
build = false

[dependencies]
chacha20poly1305 = "0.7.0"
ffi-support = "0.4"
prost = "0.8"
prost-types = "0.8"
base64 = "0.13.0"
hex = "0.4.2"
getrandom = { version = "0.2", features = ["js"] }
regex = "1"
did-key = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_jcs = "0.1"
sha2 = { version = "0.9", default-features = false }
bs58 = "0.3"
oberon = { git = "https://github.com/mikelodder7/oberon", version = "1.1.0" }
rand = "0.8"
subtle = "2.4"

[lib]
name = "okapi"
crate-type = [ "lib", "cdylib", "staticlib" ]

[features]
default = ["ffi"]
ffi = []

[build-dependencies]
prost-build = "0.8"
cbindgen = "0.19.0"

[dev-dependencies]
fluid = "0.4"
wasm-bindgen-test = "0.3.13"

[package.metadata.deb]
maintainer = "Tomislav Markovski <tomislav@trinsic.id>"
copyright = "2021, Trinsic <hello@trinsic.id>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Collection of tools that support workflows for \
authentic data and identity management."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libokapi.so", "usr/local/lib/", "644"],
    ["target/release/libokapi.a", "usr/local/lib/", "644"],
    ["../include/okapi.h", "usr/local/include/", "644"],
]
