[package]
name = "okapi"
version = "0.1.0"
authors = ["Tomislav Markovski <tomislav@trinsic.id>", "Scott Phillips <scott.phillips@trinsic.id>"]
edition = "2018"
# ensure this is not checked in as "true" as it will
# cause vendored libraries to fail compilation due
# to dependency on protoc compiler
# if you need to compile .proto files, use this line:
#build = "build.rs"
build = false

[package.metadata.deb]
maintainer = "Tomislav Markovski <tomislav@trinsic.id>"
copyright = "2021-2022, Trinsic <hello@trinsic.id>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Collection of tools that support workflows for \
authentic data and identity management."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libokapi.so", "usr/local/lib/", "644"],
    ["target/release/libokapi.a", "usr/local/lib/", "644"],
    ["../include/okapi.h", "usr/local/include/", "644"],
]

[dependencies]
chacha20poly1305 = "0.10.1"
ffi-support = "0.4"
prost = "0.11"
prost-types = "0.11.1"
base64 = "0.13.0"
hex = "0.4.3"
getrandom = { version = "0.2.7", features = ["js"] }
regex = "1"
did-key = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_jcs = "0.1"
sha2 = { version = "0.10.2", default-features = false }
blake3 = "1.3.1"
bs58 = "0.4"
oberon = "1.1.1"
rand = "0.8"
subtle = "2.4"

[lib]
name = "okapi"
crate-type = [ "lib", "cdylib", "staticlib" ]

[features]
default = ["ffi", "hashing"]
ffi = []
hashing = []

[build-dependencies]
prost-build = "0.11.1"
cbindgen = "0.24.3"

[dev-dependencies]
fluid = "0.4"
wasm-bindgen-test = "0.3.32"
