[tool.poetry]
name = "didcomm-grpc"
version = "0.1.0"
description = "DIDComm extension for gRPC"
authors = ["Tomislav Markovski <tomislav@trinsic.id>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.33.2"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.33.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
