[metadata]
name = trinsic-okapi
version = 0.2.1
author = Scott Phillips
author_email = scott.phillips@trinsic.id
description = Trinsic okapi SDK bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trinsic-id/okapi/
project_urls =
    Bug Tracker = https://github.com/trinsic-id/okapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.8
install_requires =
    protobuf
    base58
    urllib3
    PyGithub

[options.packages.find]
where = .
exclude = tests
include = okap*
