[metadata]
name = trinsic-okapi
version = 1.0.0b16
author = Scott Phillips
author_email = scott.phillips@trinsic.id
description = Trinsic okapi SDK bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trinsic-id/okapi/
project_urls =
    Bug Tracker = https://github.com/trinsic-id/okapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    protobuf>=3.17.3
    betterproto>=2.0.0b3

[options.packages.find]
exclude = tests
