[metadata]
name = trinsic-okapi
version = 1.4.0
author = Scott Phillips
author_email = scott.phillips@trinsic.id
description = Trinsic okapi SDK bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trinsic-id/okapi/python
project_urls =
    Bug Tracker = https://github.com/trinsic-id/okapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    protobuf>=3.17.3
    betterproto>=2.0.0b4
    requests>=2.22.0

[options.packages.find]
exclude = tests

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
doctests = True
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    # Generated code from betterproto
    trinsicokapi/proto,
per-file-ignores =
    # Ignore line too long because it's a base16 constant string
    tests/test_hash.py: E501
    tests/test_keys.py: E501

[options.data_files]
libs/windows = libs/windows/okapi.dll
libs/linux = libs/linux/libokapi.so
libs/macos = libs/macos/libokapi.dylib
# TODO - support ARM?
